--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,4 +11,5 @@ ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "235A191E41D3A490C07
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="../../../../../../Users/TheCrafters001/Desktop/Games/WinBuild_X64/RoboInvaders")
 
